...
      return 'Must contain at least $minUsernameLength characters';
    } else if (' \t\n!@#\$%^&*()\'".,?;:<>[]{}/\\'
        .split('')
        .any((c) => value.contains(c))) {
      return 'Cannot contain spaces or special characters';
    } else if (_takenUsernames[value] == true) {
      return 'Username already taken';
    }
    return null;
  }

  String? emailError(String value) {
    if (!EmailValidator.validate(value)) {
...
    }
    return null;
  }

  String? passwordError(String value) {
    if (value.length < minPasswordLength) {
      return 'Must contain at least $minPasswordLength characters';
    }
    if (!value.contains(RegExp('[a-z]'))) {
      return 'Must contain lowercase letters';
    }
    if (!value.contains(RegExp('[A-Z]'))) {
      return 'Must contain uppercase letters';
    }
    if (!value.contains(RegExp('[0-9]'))) {
      return 'Must contain numbers';
    }
    if (!'!@#\$%^&*()\'".,?;:<>[]{}/\\'
        .split('')
        .any((c) => value.contains(c))) {
      return 'Must contain special characters';
    }
    return null;
  }

  String? passwordConfirmError(String value) {
    if (value != _passwordController.text) {
      return 'Passwords do not match';
    }
    return null;
  }

  void privacyPolicy(BuildContext context) =>
      Navigator.of(context).pushNamed('/user/privacypolicy');
...
  @override
  Widget build(BuildContext context) {
    final valid = isValid;
    return Scaffold(
      appBar: _showAppBar
          ? AppBar(
              title: const Text('Create an Account'),
              leading: IconButton(
                icon: const Icon(Icons.navigate_before),
                onPressed: () {
                  FocusScope.of(context).unfocus();
                  Navigator.of(context).pop();
                },
...
                              style: Theme.of(context).textTheme.headlineSmall,
                            ),
                          ),
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: TextField(
                            key: const Key('signUpUsername'),
                            enableSuggestions: false,
                            autocorrect: false,
                            controller: _usernameController,
                            autofocus: true,
                            focusNode: _usernameFocus,
                            textInputAction: TextInputAction.next,
...
                            ),
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: TextField(
                            key: const Key('signUpEmail'),
                            enableSuggestions: false,
                            autocorrect: false,
                            controller: _emailController,
                            focusNode: _emailFocus,
                            textInputAction: TextInputAction.next,
                            onChanged: onEmailChanged,
...
                                  return _emailError;
                                }
                                if (_takenEmails
                                    .containsKey(_emailController.text)) {
                                  if (_takenEmails[_emailController.text] ==
                                      true) {
                                    return 'Email is already taken';
                                  } else {
                                    return 'No other accounts with this email';
                                  }
                                }
                                if (_emailController.text.isEmpty) {
                                  return null;
...
                            ),
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: TextField(
                            key: const Key('signUpFirstName'),
                            enableSuggestions: false,
                            autocorrect: false,
                            controller: _firstNameController,
                            focusNode: _firstNameFocus,
                            textInputAction: TextInputAction.next,
                            onChanged: onFirstNameChanged,
...
                            ),
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: TextField(
                            key: const Key('signUpLastName'),
                            enableSuggestions: false,
                            autocorrect: false,
                            controller: _lastNameController,
                            focusNode: _lastNameFocus,
                            textInputAction: TextInputAction.next,
                            onChanged: onLastNameChanged,
...
                            ),
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: TextField(
                            key: const Key('signUpPassword'),
                            obscureText: !_passwordVisible,
                            enableSuggestions: false,
                            autocorrect: false,
                            controller: _passwordController,
                            textInputAction: TextInputAction.done,
                            focusNode: _passwordFocus,
...
                                )),
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: TextField(
                            key: const Key('signUpPasswordConfirm'),
                            obscureText: !_passwordVisible,
                            enableSuggestions: false,
                            autocorrect: false,
                            controller: _passwordConfirmController,
                            textInputAction: TextInputAction.done,
                            focusNode: _passwordConfirmFocus,
...
                                      : Icons.visibility_off),
                                )),
                          ),
                        ),
                        const SizedBox(height: 20),
                        Tooltip(
                          message: 'Create account',
                          child: Opacity(
                            opacity: valid ? 1.0 : 0.5,
                            child: Container(
                              decoration: BoxDecoration(
                                color: Theme.of(context).primaryColor,
                                borderRadius: BorderRadius.circular(2),
...
