...
      setState(() => _usernameError = usernameError(value));
  void onPasswordChanged(String value) =>
      setState(() => _passwordError = passwordError(value));

  String? usernameError(String value) {
    if (value.length < minUsernameLength || value.contains(" ")) {
      return 'Please enter your username';
    }
    return null;
  }

  String? passwordError(String value) {
    if (value.isEmpty) {
      return 'Please enter your password';
    }
    return null;
  }

  bool get isValid => isUsernameValid && isPasswordValid;

...
                      ),
                    ),
                    const SizedBox(height: 32),
                    Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: TextField(
                        key: const Key('signInUsername'),
                        enableSuggestions: false,
                        autocorrect: false,
                        controller: _usernameController,
                        focusNode: _usernameFocus,
                        textInputAction: TextInputAction.next,
                        autofocus: false,
...
                        ),
                      ),
                    ),
                    Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: TextField(
                        key: const Key('signInPassword'),
                        obscureText: !_passwordVisible,
                        enableSuggestions: false,
                        autocorrect: false,
                        controller: _passwordController,
                        textInputAction: TextInputAction.done,
                        focusNode: _passwordFocus,
...
                          color: Theme.of(context).primaryColor,
                          borderRadius: BorderRadius.circular(2),
                        ),
                        child: Material(
                          color: Colors.transparent,
                          child: InkWell(
                            key: const Key('signInSubmit'),
                            onTap: () => login(context),
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: [
                                Padding(
                                  padding: const EdgeInsets.all(16.0),
...
                    ),
                    const SizedBox(height: 20),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.spaceBetween,
                      children: [
                        Tooltip(
                          message: 'Sign up',
                          child: TextButton(
                            key: const Key('signup'),
                            onPressed: () => signUp(context),
                            child: const Text('Sign up'),
                          ),
                        ),
...
