...
  @override
  State<CreateProjectPage> createState() => _CreateProjectPageState();
}

class _CreateProjectPageState extends State<CreateProjectPage> {
  static const projectAlreadyExistsMessage =
      'A project with this name already exists';

  final _nameController = TextEditingController();
  final _nameFocus = FocusNode();
  final Map<String, bool> _takenNames = {};
  Future<bool>? _checking;
  String? _nameError;
...
    }
    return taken;
  }

  String? nameError(String value) {
    if (value.length < minProjectNameLength) {
      return 'Must contain at least $minProjectNameLength characters';
    } else if (' \t\n!@#\$%^&*()\'".,?;:<>[]{}/\\'
        .split('')
        .any((c) => value.contains(c))) {
      return 'Cannot contain spaces or special characters';
    } else if (_takenNames[value] == true) {
      return projectAlreadyExistsMessage;
...
          constraints: const BoxConstraints(maxWidth: 300),
          child: Column(
            children: [
              Padding(
                padding: const EdgeInsets.all(8.0),
                child: TextField(
                  key: const Key('createProjectName'),
                  enableSuggestions: false,
                  autocorrect: false,
                  controller: _nameController,
                  focusNode: _nameFocus,
                  textInputAction: TextInputAction.next,
                  autofocus: true,
...
              ),
              Padding(
                padding: const EdgeInsets.all(4.0),
                child: Material(
                  color: Theme.of(context).colorScheme.background,
                  child: InkWell(
                    key: const Key('createProjectSubmit'),
                    onTap: isNameValid ? () => submit(context) : null,
                    child: SizedBox(
                      height: 64,
                      child: Padding(
                        padding: const EdgeInsets.all(16.0),
                        child: Center(
...
